@@ -399,4 +399,85 @@ subtest 'more assertions' => sub {
   );
 };
 
+subtest 'use of an absolute URI and different dialect within contentSchema' => sub {
+  my $js = JSON::Schema::Modern->new(
+    validate_content_schemas => 1,
+    collect_annotations => 1,
+  );
+
+  $js->add_schema({
+    '$id' => 'https://my_metaschema',
+    '$schema' => 'https://json-schema.org/draft/2020-12/schema',
+    '$vocabulary' => {
+      'https://json-schema.org/draft/2020-12/vocab/core' => true,
+      'https://json-schema.org/draft/2020-12/vocab/validation' => true,
+    },
+  });
+
+  my $subschema;
+  cmp_result(
+    $js->evaluate(
+      { foo => '{"bar":1}' },
+      {
+        '$id' => 'https://example.com',
+        additionalProperties => {
+          contentMediaType => 'application/json',
+          contentSchema => $subschema = {
+            '$id' => 'https://foo.com',
+            '$schema' => 'https://my_metaschema',
+            '$defs' => {
+              my_def => { type => 'object', blah => 1 },
+            },
+            '$ref' => '#/$defs/my_def',
+            bloop => 2,
+            properties => { bar => false }, # this keyword should only annotate
+          },
+        },
+      },
+    )->TO_JSON,
+    {
+      valid => true,
+      annotations => [
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/additionalProperties/contentMediaType',
+          absoluteKeywordLocation => 'https://example.com#/additionalProperties/contentMediaType',
+          annotation => 'application/json',
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/additionalProperties/contentSchema/$ref/blah',
+          absoluteKeywordLocation => 'https://foo.com#/$defs/my_def/blah',
+          annotation => 1,
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/additionalProperties/contentSchema/bloop',
+          absoluteKeywordLocation => 'https://foo.com#/bloop',
+          annotation => 2,
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/additionalProperties/contentSchema/properties',
+          absoluteKeywordLocation => 'https://foo.com#/properties',
+          annotation => { bar => false },
+        },
+        {
+          instanceLocation => '/foo',
+          keywordLocation => '/additionalProperties/contentSchema',
+          absoluteKeywordLocation => 'https://example.com#/additionalProperties/contentSchema',
+          annotation => $subschema,
+        },
+        {
+          instanceLocation => '',
+          keywordLocation => '/additionalProperties',
+          absoluteKeywordLocation => 'https://example.com#/additionalProperties',
+          annotation => [ 'foo' ],
+        },
+      ],
+    },
+    'evaluation of the subschema correctly uses the new $id and $schema',
+  );
+};
+
 done_testing;
